--- a/index.html
+++ b/index.html
@@ -23,35 +23,41 @@
 
   <body>
     <header class="header">
-      <div class="container header-container">
-        <a href="./index.html" lang="en" class="logo logo-header link"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <nav>
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link link current">Студія</a>
+      <div class="container header__container">
+        <a class="logo header__logo link" href="./index.html" lang="en">
+          <span class="logo__accent">Web</span>Studio
+        </a>
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a class="nav__link link nav__link--current" href="./index.html"
+                >Студія</a
+              >
             </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link link">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact-list list">
+        <ul class="header__contact-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contact link" lang="en">
-              <svg class="mail-icon" width="16" height="12">
+            <a
+              class="header__contact-link link"
+              href="mailto:info@devstudio.com"
+              lang="en"
+            >
+              <svg class="header__contact-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="contact link">
-              <svg class="phone-icon" width="10" height="16">
+            <a class="header__contact-link link" href="tel:+380961111111">
+              <svg class="header__contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -63,8 +69,10 @@
     <main>
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-btn btn" data-modal-open>
+          <h1 class="hero-section__title">
+            Ефективні рішення для вашого бізнесу
+          </h1>
+          <button class="hero-section__btn btn" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -73,7 +81,7 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="features-list card-set list">
-            <li class="card-set-item">
+            <li class="card-set__item">
               <div class="features-card">
                 <svg class="feature-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -85,7 +93,7 @@
                 формування позиції.
               </p>
             </li>
-            <li class="card-set-item">
+            <li class="card-set__item">
               <div class="features-card">
                 <svg class="feature-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -97,7 +105,7 @@
                 тягне у себе.
               </p>
             </li>
-            <li class="card-set-item">
+            <li class="card-set__item">
               <div class="features-card">
                 <svg class="feature-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -108,7 +116,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="card-set-item">
+            <li class="card-set__item">
               <div class="features-card">
                 <svg class="feature-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -127,7 +135,7 @@
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-list card-set list">
-            <li class="work-item card-set-item">
+            <li class="work-item card-set__item">
               <img
                 src="./images/work1.jpg"
                 alt="Приклади робіт"
@@ -138,7 +146,7 @@
                 <p class="work-text">Десктопні додатки</p>
               </div>
             </li>
-            <li class="work-item card-set-item">
+            <li class="work-item card-set__item">
               <img
                 src="./images/work2.jpg"
                 alt="Приклади робіт"
@@ -149,7 +157,7 @@
                 <p class="work-text">Мобільні додатки</p>
               </div>
             </li>
-            <li class="work-item card-set-item">
+            <li class="work-item card-set__item">
               <img
                 src="./images/work3.jpg"
                 alt="Приклади робіт"
@@ -167,7 +175,7 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="card-set list">
-            <li class="team-card card-set-item">
+            <li class="team-card card-set__item">
               <img
                 src="./images/team1.jpg"
                 alt="Член команди"
@@ -176,7 +184,7 @@
               />
               <div class="team-wrapper">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
-                <p lang="en" class="team-postion">Product Designer</p>
+                <p class="team-postion" lang="en">Product Designer</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -233,7 +241,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card card-set-item">
+            <li class="team-card card-set__item">
               <img
                 src="./images/team2.jpg"
                 alt="Член команди"
@@ -242,7 +250,7 @@
               />
               <div class="team-wrapper">
                 <h3 class="team-name">Ольга Рєпіна</h3>
-                <p lang="en" class="team-postion">Frontend Developer</p>
+                <p class="team-postion" lang="en">Frontend Developer</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -299,7 +307,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card card-set-item">
+            <li class="team-card card-set__item">
               <img
                 src="./images/team3.jpg"
                 alt="Член команди"
@@ -308,7 +316,7 @@
               />
               <div class="team-wrapper">
                 <h3 class="team-name">Микола Тарасов</h3>
-                <p lang="en" class="team-postion">Marketing</p>
+                <p class="team-postion" lang="en">Marketing</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -365,7 +373,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card card-set-item">
+            <li class="team-card card-set__item">
               <img
                 src="./images/team4.jpg"
                 alt="Член команди"
@@ -374,7 +382,7 @@
               />
               <div class="team-wrapper">
                 <h3 class="team-name">Михайло Єрмаков</h3>
-                <p lang="en" class="team-postion">UI Designer</p>
+                <p class="team-postion" lang="en">UI Designer</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -517,30 +525,30 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="contacts">
-          <a href="./index.html" lang="en" class="logo logo-footer link"
-            ><span class="logo-accent">Web</span>Studio</a
+          <a class="logo logo-footer link" href="./index.html" lang="en">
+            <span class="logo-accent">Web</span>Studio</a
           >
           <address>
             <ul class="list">
               <li class="contact-item">
                 <a
+                  class="contact-link link"
                   href="https://goo.gl/maps/BQu9GLipV9uaVXhj8"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="contact-link link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="contact-item">
                 <a
-                  href="mailto:info@devstudio.com"
                   class="contact-link mail link"
+                  href="mailto:info@devstudio.com"
                   lang="en"
                   >info@devstudio.com
                 </a>
               </li>
               <li class="contact-item">
-                <a href="tel:+380961111111" class="contact-link phone link"
+                <a class="contact-link phone link" href="tel:+380961111111"
                   >+38 096 111 11 11
                 </a>
               </li>
