--- a/portfolio.html
+++ b/portfolio.html
@@ -23,37 +23,43 @@
 
   <body>
     <header class="header">
-      <div class="container header-container">
-        <a href="./index.html" lang="en" class="logo logo-header link"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <nav>
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link link">Студія</a>
+      <div class="container header__container">
+        <a class="logo header__logo link" href="./index.html" lang="en">
+          <span class="logo__accent">Web</span>Studio
+        </a>
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a class="nav__link link" href="./index.html">Студія</a>
             </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link current"
+            <li class="nav__item">
+              <a
+                class="nav__link link nav__link--current"
+                href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link link">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact-list list">
+        <ul class="header__contact-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contact link" lang="en">
-              <svg class="mail-icon" width="16" height="12">
+            <a
+              class="header__contact-link link"
+              href="mailto:info@devstudio.com"
+              lang="en"
+            >
+              <svg class="header__contact-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="contact link">
-              <svg class="phone-icon" width="10" height="16">
+            <a class="header__contact-link link" href="tel:+380961111111">
+              <svg class="header__contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -68,23 +74,23 @@
           <h1 class="visually-hidden">Наші проєкти</h1>
           <ul class="filter-list list">
             <li>
-              <button type="button" class="filter-btn btn">Усі</button>
+              <button class="filter-btn btn" type="button">Усі</button>
             </li>
             <li>
-              <button type="button" class="filter-btn btn">Веб-сайти</button>
+              <button class="filter-btn btn" type="button">Веб-сайти</button>
             </li>
             <li>
-              <button type="button" class="filter-btn btn">Додатки</button>
+              <button class="filter-btn btn" type="button">Додатки</button>
             </li>
             <li>
-              <button type="button" class="filter-btn btn">Дизайн</button>
+              <button class="filter-btn btn" type="button">Дизайн</button>
             </li>
             <li>
-              <button type="button" class="filter-btn btn">Маркетинг</button>
+              <button class="filter-btn btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="portfolio-list card-set list">
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -108,7 +114,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -134,7 +140,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -160,7 +166,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -186,7 +192,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -212,7 +218,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -238,7 +244,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -264,7 +270,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
@@ -290,7 +296,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set-item">
+            <li class="portfolio-card card-set__item">
               <a href="" class="link">
                 <div class="project-thumb">
                   <img
