--- a/index.html
+++ b/index.html
@@ -642,75 +642,81 @@
           </svg>
         </button>
         <form class="order-form">
-          <strong class="order-form-title"
+          <strong class="order-form__title"
             >Залиште свої дані, ми вам передзвонимо</strong
           >
-          <div class="form-group" role="group">
-            <label class="order-form-label" for="user-name">Ім'я</label>
-            <div class="input-wrapper">
+          <div class="order-form__group" role="group">
+            <label class="order-form__label" for="user-name">Ім'я</label>
+            <div class="order-form__input-wrapper">
               <input
-                class="order-form-input"
+                class="order-form__input"
                 type="text"
                 id="user-name"
                 name="user-name"
                 required
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-            <label class="order-form-label" for="user-phone">Телефон</label>
-            <div class="input-wrapper">
+            <label class="order-form__label" for="user-phone">Телефон</label>
+            <div class="order-form__input-wrapper">
               <input
-                class="order-form-input"
+                class="order-form__input"
                 type="tel"
                 id="user-phone"
                 name="user-phone"
                 required
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-            <label class="order-form-label" for="user-mail">Пошта</label>
-            <div class="input-wrapper">
+            <label class="order-form__label" for="user-mail">Пошта</label>
+            <div class="order-form__input-wrapper">
               <input
-                class="order-form-input"
+                class="order-form__input"
                 type="email"
                 id="user-mail"
                 name="user-mail"
                 required
               />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            <label class="order-form-label" for="user-message">Коментар</label>
+            <label class="order-form__label" for="user-message">Коментар</label>
             <textarea
-              class="order-form-text"
+              class="order-form__text"
               name="user-message"
               id="user-message"
               placeholder="Введіть текст"
             ></textarea>
           </div>
 
-          <label class="checkbox-label" for="form-checkbox">
+          <label class="checkbox__label" for="form-checkbox">
             <input
-              class="checkbox-input visually-hidden"
+              class="checkbox__input visually-hidden"
               type="checkbox"
               id="form-checkbox"
               name="form-checkbox"
               required
             />
-            <svg class="checkbox-icon" width="16" height="15">
-              <use class="uncheck" href="./images/icons.svg#icon-uncheck"></use>
-              <use class="check" href="./images/icons.svg#icon-check"></use>
+            <svg class="checkbox__icon" width="16" height="15">
+              <use
+                class="checkbox__icon--uncheck"
+                href="./images/icons.svg#icon-uncheck"
+              ></use>
+              <use
+                class="checkbox__icon--check"
+                href="./images/icons.svg#icon-check"
+              ></use>
             </svg>
             Погоджуюся з розсилкою та приймаю
             <a class="terms-link" href="./index.html">Умови договору</a>
           </label>
 
-          <button class="order-btn btn" type="submit">Відправити</button>
+          <button class="order-form__btn btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
